start, begin, question page functionality

--- a/templates/question.html
+++ b/templates/question.html
@@ -7,11 +7,13 @@
 
       <!-- you should have one item like this for every choice -->
       <p>
-        <input
-            type="radio"
-            name="answer"
-            value="value-goes-here">
-        choice-goes-here
+        {% for choice in question.choices %}
+          <input
+              type="radio"
+              name="answer"
+              value="{{ choice }}">
+              <label for="{{ choice }}">{{ choice }}</label>
+        {% endfor %}
       </p>
 
     <button>Continue</button>
