--- a/templates/question.html
+++ b/templates/question.html
@@ -4,7 +4,7 @@
   <h1>{{ question.question }}</h1>
 
   <form action="/answer" method="POST">
-
+    <input type="hidden" name="question_index" value="{{ question_index }}">
       <!-- you should have one item like this for every choice -->
       <p>
         {% for choice in question.choices %}
