--- a/templates/question.html
+++ b/templates/question.html
@@ -5,16 +5,13 @@
 
   <form action="/answer" method="POST">
     <input type="hidden" name="question_index" value="{{ question_index }}">
-      <!-- you should have one item like this for every choice -->
-      <p>
-        {% for choice in question.choices %}
-          <input
-              type="radio"
-              name="answer"
-              value="{{ choice }}">
-              <label for="{{ choice }}">{{ choice }}</label>
-        {% endfor %}
-      </p>
+
+    <p>
+      {% for choice in question.choices %}
+      <input type="radio" name="answer" value="{{ choice }}">
+      <label for="{{ choice }}">{{ choice }}</label>
+      {% endfor %}
+    </p>
 
     <button>Continue</button>
   </form>
