--- a/templates/question.html
+++ b/templates/question.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
 
+  {% for msg in get_flashed_messages() %}
+    <p style="color: red">{{ msg }}</p>
+  {% endfor %}
+
   <h1>{{ question.question }}</h1>
 
   <form action="/answer" method="POST">
